Adicionando style à outras genérico de título para outras boxes; Adicionando histograma responsivo para brasil/ufs contando nascimentos;

--- a/www/style.css
+++ b/www/style.css
@@ -2,3 +2,7 @@
   font-weight: 800 !important;
   text-align: center !important;
 }
+.title-center{
+  font-weight: 800 !important;
+  text-align: center !important;
+}
