Finalizando primeira versão;

--- a/www/style.css
+++ b/www/style.css
@@ -27,7 +27,7 @@
   width: 100% !important;
 }
 /* Alinhando botão de inválidos */
-.tabela_c_invalido{
+.tabela_c_invalidos{
   align-content: center;
 }
 
